feat: implement user service
